# vigilant-parakeet

./: .gitignore  ARCHITECTURE.md  BATCH_INTEGRATION_COMPLETE.md  BATCH_PROCESSING.md  BENCHMARK_RESULTS.md  BROADCAST_STATUS.md  BUILDER_PATTERN.md  BUILDER_PATTERN_SUMMARY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DATA_PLANE_MIGRATION_COMPLETE.md  DEVELOPMENT.md  JITTER_FEATURE.md  LICENSE  LOGGING_IMPROVEMENTS.md  MIGRATION_CHECKLIST.md  NEXT_STEPS.md  NODE_TRAIT_CONSOLIDATION.md  PERFORMANCE_ARCHITECTURE.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_QUICK_REF.md  PERFORMANCE_SUMMARY.md  PHASE2_MIGRATION_COMPLETE.md  README.md  REPLYTYPE_CONSOLIDATION.md  ROUTING_TABLE_MEMORY_FIX.md  SIMULATOR_CHANNEL_OPTIMIZATION.md  TUI_ARCHITECTURE_IMPROVEMENTS.md  ZERO_COPY_DATA_MESSAGES_ANALYSIS.md  ZERO_COPY_DATA_MESSAGES_RESULTS.md  ZERO_COPY_IMPLEMENTATION.md  ZERO_COPY_PRODUCTION_INTEGRATION.md  file.yaml  lcov.info  osm_cache.json
common/: ARCHITECTURE.md  Cargo.toml
common/benches/: device_send_recv.rs  stats_ops.rs
common/src/: batch.rs  channel_parameters.rs  device.rs  error.rs  lib.rs  network_interface.rs  stats.rs  tun.rs
docs/: build.sh  (+3 more)
libp2p_vanet/: Cargo.toml
libp2p_vanet/src/: behaviour.rs  connection.rs  framing.rs  lib.rs  multiaddr_ext.rs  spawn.rs  transport.rs
libp2p_vanet/tests/: gossipsub_memory.rs
native_viz/: Cargo.toml  README.md
native_viz/src/: api.rs  app.rs  main.rs  nodes_plugin.rs
node/: ARCHITECTURE.md  Cargo.toml
node/src/: args.rs  dev.rs  lib.rs  main.rs  message.rs  sim.rs
node/src/control/: args.rs  client_cache.rs  mod.rs  node.rs  obu.rs  route.rs  routing.rs  rsu.rs
node/src/control/obu/: mod.rs  routing.rs  session.rs
node/src/control/rsu/: mod.rs  routing.rs  session.rs
node/src/messages/: heartbeat.rs  message.rs  mod.rs  packet_type.rs  session.rs
node/src/messages/control/: heartbeat.rs  mod.rs
node/src/messages/data/: mod.rs
node/tests/: common.rs  hub.rs  integration_broadcast_encryption.rs  integration_encryption.rs  integration_failover_send_error.rs  integration_latency_measurement_mocked_time.rs  integration_topology.rs  integration_two_hop.rs  routing_integration.rs
node_lib/: ARCHITECTURE.md  Cargo.toml
node_lib/benches/: batch_processing.rs  client_cache_ops.rs  flat_vs_nested_serialization.rs  message_parse.rs  routing_get_route.rs  serialize_message.rs  zero_copy_data_messages.rs  zero_copy_reply.rs
node_lib/examples/: buffer_pool_usage.rs
node_lib/proptest-regressions/control/: routing_utils.txt
node_lib/src/: args.rs  buffer_pool.rs  builder.rs  crypto.rs  dev.rs  error.rs  lib.rs  metrics.rs
node_lib/src/control/: batch.rs  client_cache.rs  mod.rs  node.rs  route.rs  routing_utils.rs
node_lib/src/control/obu/: mod.rs  routing.rs  session.rs
node_lib/src/control/rsu/: mod.rs  routing.rs
node_lib/src/data/: mod.rs  obu.rs  rsu.rs
node_lib/src/messages/: message.rs  mod.rs  packet_type.rs
node_lib/src/messages/auth/: key_exchange.rs  mod.rs  session_terminated.rs
node_lib/src/messages/control/: heartbeat.rs  key_exchange.rs  mod.rs  session_terminated.rs
node_lib/src/messages/data/: mod.rs
node_lib/src/server/: mod.rs
node_lib/src/test_helpers/: hub.rs  util.rs
node_lib/src/tests/: hub.rs  metrics_no_stats.rs  metrics_tests.rs
node_lib/tests/: common.rs  integration_broadcast_encryption.rs  integration_encryption.rs  integration_failover_send_error.rs  integration_flow.rs  integration_latency_measurement_mocked_time.rs  integration_loop_repro.rs  integration_server.rs  integration_topology.rs  integration_two_hop.rs  routing_integration.rs  simple_broadcast_test.rs  test_helpers_util.rs
obu_lib/: ARCHITECTURE.md  Cargo.toml
obu_lib/src/: admin.rs  args.rs  builder.rs  gossipsub.rs  lib.rs  routing.rs  session.rs  test_helpers.rs
obu_lib/src/control/: dh_key_store.rs  mod.rs  node.rs  routing.rs  routing_cache.rs  routing_utils.rs  session.rs
obu_lib/src/control/routing/: cache_tests.rs  failover_tests.rs  heartbeat_tests.rs  loop_repro.rs  regression_tests.rs  selection_tests.rs
obu_lib/src/tests/: create_smoke.rs  lib_smoke.rs  node_tests.rs
rsu_lib/: ARCHITECTURE.md  Cargo.toml
rsu_lib/benches/: get_route.rs  heartbeat_handle.rs  routing_scale.rs
rsu_lib/src/: admin.rs  args.rs  builder.rs  gossipsub.rs  lib.rs  routing.rs  test_helpers.rs
rsu_lib/src/control/: client_cache.rs  mod.rs  node.rs  route.rs  routing.rs  routing_utils.rs
rsu_lib/src/tests/: create_smoke.rs  encryption_tests.rs  lib_smoke.rs  node_tests.rs
scripts_tools/: Cargo.toml
scripts_tools/benches/: build_candidates.rs
scripts_tools/src/: autofix_configs.rs  build_summary.rs  generate_pairs.rs  lib.rs  main.rs  merge_latency.rs  ns_addrs.rs  parse_band.rs  validate_configs.rs  validate_configs_tests.rs
scripts_tools/src/tests/: allocator_tests.rs  autofix_tests.rs
scripts_tools/tests/: allocator_db_edgecases.rs  allocator_persistence.rs  allocator_tests.rs  autofix_allocator_integration.rs  integration.rs  validate_configs.rs
server_lib/: ARCHITECTURE.md  Cargo.toml  README.md
server_lib/src/: admin.rs  args.rs  builder.rs  cloud_protocol.rs  control.rs  lib.rs  registry.rs  server.rs
server_lib/tests/: integration_encryption.rs
simulator/: ARCHITECTURE.md  Cargo.toml
simulator/src/: channel.rs  device_bridge.rs  device_hub.rs  fading.rs  interface_builder.rs  main.rs  metrics.rs  namespace.rs  node_factory.rs  node_interfaces.rs  sim_args.rs  simulator.rs  topology.rs  tui.rs  webview.rs
simulator/src/mobility/: graph.rs  mod.rs  osm.rs  position.rs  vehicle.rs
simulator/src/tui/: events.rs  logging.rs  mod.rs  render.rs  state.rs  utils.rs
simulator/src/tui/tabs/: channels.rs  logs.rs  metrics.rs  mod.rs  nodes.rs  registry.rs  topology.rs  upstreams.rs
simulator/tests/: nakagami_integration.rs
visualization/: ARCHITECTURE.md  Cargo.toml  README.md  cy_interop.js  index.html
visualization/src/: graph.rs  graph_helpers.rs  lib.rs  main.rs  select.rs  throughput.rs
visualization/tests/: graph_helpers_tests.rs  wasm_tests.rs
(+1287 files in other folders)
