[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = {version = "*", features = ["full"]}
tokio-tun = "*"
anyhow = "*"
mac_address = "*"
nix = {version = "*", features = ["socket", "net", "ioctl"]}
socket2 = {version = "*", features = ["all"]}
libc = "*"
serde = { version = "*", features = ["derive"]}
futures = "*"
config = "*"

[target.'cfg(target_family = "wasm")'.dependencies]
serde = { version = "*", features = ["derive"]}

[features]
# When enabled, exposes test-only helpers (TokioTun) for downstream test harnesses
test_helpers = []
stats = []

[dev-dependencies]
criterion = "0.5"
node_lib = { path = "../node_lib" }

[[bench]]
name = "device_send_recv"
harness = false
