[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tun = "0.11.2"
tokio = {version = "1.35.1", features = ["full"]}
anyhow = "1.0.79"
socket2 = {version = "0.5.5", features = ["all"]}
uninit = "0.6.2"
libc = "0.2.153"
nix = {version = "0.28.0", features = ["socket", "net", "ioctl"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
clap = { version = "4.4.18", features = ["derive"] }
futures = "0.3.30"
netns-rs = "0.1.0"
config = "0.14.0"
rand = "0.8.5"
mac_address = "1.1.5"
indexmap = "2.2.3"
tokio-timerfd = "0.2.0"
itertools = "0.12.1"
async-trait = "0.1.77"

[[bin]]
name="node"
path="src/main.rs"

[[bin]]
name="simulation"
path="src/sim.rs"
