[package]
name = "node"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = {version = "*", features = ["full"]}
anyhow = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "std"] }
clap = { version = "*", features = ["derive"] }
node_lib = { path = "../node_lib/" }
