[package]
name = "node"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = {version = "*", features = ["full"]}
anyhow = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "std"] }
clap = { version = "*", features = ["derive"] }
node_lib = { path = "../node_lib/" }
rsu_lib = { path = "../rsu_lib/" }
obu_lib = { path = "../obu_lib/" }
server_lib = { path = "../server_lib/" }
mac_address = "*"
tracing = "*"
