[package]
name = "node_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "*", features = ["full"]}
tokio-tun = "*"
anyhow = "*"
socket2 = {version = "*", features = ["all"]}
uninit = "*"
libc = "*"
nix = {version = "*", features = ["socket", "net", "ioctl"]}
tracing = "*"
clap = { version = "*", features = ["derive"] }
futures = "*"
mac_address = "*"
indexmap = "*"
tokio-timerfd = "*"
itertools = "*"
serde = { version = "*", features = ["derive"]}
common = { path = "../common/" }
arc-swap = { version = "*" }
tracing-subscriber = { version = "*", features = ["env-filter"] }

[features]
stats = [ "common/stats" ]
test_helpers = [ "common/test_helpers" ]

[dev-dependencies]
criterion = "0.5"
common = { path = "../common/" }
