[package]
name = "node_lib"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = {version = "*", features = ["full", "test-util"]}
tokio-tun = "*"
anyhow = "*"
socket2 = {version = "*", features = ["all"]}
uninit = "*"
libc = "*"
nix = {version = "*", features = ["socket", "net", "ioctl"]}
tracing = "*"
clap = { version = "*", features = ["derive"] }
futures = "*"
mac_address = "*"
indexmap = "*"
tokio-timerfd = "*"
itertools = "*"
serde = { version = "*", features = ["derive"]}
common = { path = "../common/" }
arc-swap = { version = "*" }
tracing-subscriber = { version = "*", features = ["env-filter"] }
aes-gcm = { version = "0.10", features = ["aes"] }

[features]
stats = [ "common/stats" ]
test_helpers = [ "common/test_helpers" ]

[dev-dependencies]
criterion = "0.5"
common = { path = "../common/" }
proptest = "1.0"
obu_lib = { path = "../obu_lib/" }
rsu_lib = { path = "../rsu_lib/" }

[[bench]]
name = "message_parse"
harness = false

[[bench]]
name = "serialize_message"
harness = false

[[bench]]
name = "routing_get_route"
harness = false
