[package]
name = "scripts_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.1"
anyhow = "1.0"
libc = "0.2"
glob = "0.3"
ipnetwork = "0.21"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "build_candidates"
path = "benches/build_candidates.rs"
harness = false
