[package]
name = "server_lib"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "*", features = ["full", "net"] }
anyhow = "*"
tracing = "*"
clap = { version = "*", features = ["derive"] }
mac_address = "*"

[dev-dependencies]
tokio = { version = "*", features = ["full", "test-util"] }
