[package]
name = "server_lib"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "*", features = ["full", "net"] }
anyhow = "*"
tracing = "*"
clap = { version = "*", features = ["derive"] }
mac_address = "*"
node_lib = { path = "../node_lib" }
common = { path = "../common" }
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
tokio = { version = "*", features = ["full", "test-util"] }
obu_lib = { path = "../obu_lib/", features = ["test_helpers"] }
rsu_lib = { path = "../rsu_lib/", features = ["test_helpers"] }

[features]
test_helpers = ["node_lib/test_helpers", "common/test_helpers"]
