[package]
name = "simulator"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio-tun = "*"
tokio = {version = "*", features = ["full"]}
anyhow = "*"
uninit = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "std"] }
clap = { version = "*", features = ["derive"] }
futures = "*"
netns-rs = "*"
config = "*"
rand = "*"
mac_address = "*"
tokio-timerfd = "*"
node_lib = { path = "../node_lib/" }
itertools = "*"
warp = {version = "*", features = ["server"], optional = true}
serde = { version = "*", features = ["derive"]}
common = { path = "../common/" }
obu_lib = { path = "../obu_lib/" }
rsu_lib = { path = "../rsu_lib/" }
server_lib = { path = "../server_lib/" }

[features]
webview = [ "dep:warp", "node_lib/stats" ]
test_helpers = [ "common/test_helpers", "node_lib/test_helpers", "obu_lib/test_helpers", "rsu_lib/test_helpers", "server_lib/test_helpers" ]

[dev-dependencies]
serde_json = "*"
