[package]
name = "simulator"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio-tun = "*"
tokio = {version = "*", features = ["full"]}
anyhow = "*"
uninit = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "std"] }
chrono = "*"
clap = { version = "*", features = ["derive"] }
futures = "*"
netns-rs = "*"
config = "*"
rand = "*"
mac_address = "*"
tokio-timerfd = "*"
node_lib = { path = "../node_lib/" }
itertools = "*"
warp = {version = "*", features = ["server"], optional = true}
serde = { version = "*", features = ["derive"]}
serde_json = { version = "*", optional = true }
ratatui = { version = "*", optional = true }
crossterm = { version = "*", optional = true }
common = { path = "../common/" }
obu_lib = { path = "../obu_lib/" }
rsu_lib = { path = "../rsu_lib/" }
server_lib = { path = "../server_lib/" }
human_format = "*"

[features]
webview = [ "dep:warp", "dep:serde_json", "node_lib/stats" ]
tui = [ "dep:ratatui", "dep:crossterm" ]
test_helpers = [ "common/test_helpers", "node_lib/test_helpers", "obu_lib/test_helpers", "rsu_lib/test_helpers" ]

[dev-dependencies]
serde_json = "*"
