[package]
name = "simulator"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio-tun = "*"
tokio = { version = "*", features = ["full"] }
anyhow = "*"
uninit = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "std"] }
chrono = "*"
clap = { version = "*", features = ["derive"] }
futures = "*"
netns-rs = "*"
config = "*"
rand = "*"
once_cell = "*"
mac_address = "*"
tokio-timerfd = "*"
node_lib = { path = "../node_lib/" }
itertools = "*"
warp = { version = "*", features = ["server"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
ratatui = { version = "*" }
crossterm = { version = "*" }
common = { path = "../common/" }
obu_lib = { path = "../obu_lib/" }
rsu_lib = { path = "../rsu_lib/" }
server_lib = { path = "../server_lib/" }
human_format = "*"
unicode-segmentation = "*"
unicode-width = "*"
reqwest = { version = "*", features = ["json", "form"] }
petgraph = { version = "*" }
sysinfo = { version = "0.38.4" }
jemallocator = { version = "0.5.4", features = [
  "profiling",
  "unprefixed_malloc_on_supported_platforms",
] }
jemalloc-ctl = { version = "0.5" }

[features]
default = ["stats"]
stats = [
  "common/stats",
]
test_helpers = [
  "common/test_helpers",
  "node_lib/test_helpers",
  "obu_lib/test_helpers",
  "rsu_lib/test_helpers",
]

[dev-dependencies]
serde_json = "*"
