[package]
name = "visualization"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
gloo-net = "*"
gloo-timers = { version = "*", features = ["futures"]}
gloo-events = "*"
serde = { version = "*", features = ["derive"] }
wasm-bindgen-futures = "*"
tracing = { version = "*", default-features = false }
tracing-subscriber = { version = "*", features = ["fmt", "registry"] }
tracing-web = { version = "*" }
common = { path = "../common/", features = ["stats"] }
yew = { version = "*", features = [ "csr" ]}
yew-plotly = "*"
web-sys = "*"
wasm-bindgen = { version = "*", features = ["serde-serialize"] }
serde_json = "*"
js-sys = "*"
serde-wasm-bindgen = "*"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
# Allow workspace-level `--features test_helpers` without changing visualization behaviour.
# This is a no-op feature used by CI and workspace feature flags.
test_helpers = []
